--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DB_DATA_PORT=
-DB_DATA_USER=
-DB_DATA_PASSWORD=
-DB_DATA_DATABASE=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=
 TZ=
 
-PG_ADMIN_EMAIL=admin.tech@inkoms.com
+PG_ADMIN_EMAIL=
 PG_ADMIN_PASSWORD=
 PG_ADMIN_PORT=
