--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     restart: always
     image: postgres:latest
     environment:
-      POSTGRES_USER: ${DB_DATA_USER}
-      POSTGRES_PASSWORD: ${DB_DATA_PASSWORD}
-      POSTGRES_DB: ${DB_DATA_DATABASE}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
       TZ: ${TZ}
     volumes:
       - ./inkoms-postgresql-db:/var/lib/postgresql/data
     ports:
-      - ${DB_DATA_PORT}:5432
+      - ${DB_PORT}:5432
     networks:
       - inkoms-postgresql
 
